--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "udf-pdm-roadapp",
+    "name": "RoadApp",
     "slug": "udf-pdm-roadapp",
     "version": "1.0.0",
     "orientation": "portrait",
