--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   },
   "dependencies": {
     "expo": "~41.0.1",
+    "expo-cli": "^4.5.0",
+    "expo-linear-gradient": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-maps": "^0.28.0",
+    "react-native-paper": "^4.9.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
